[tool.poetry]
name = "aghpb_parser"
version = "0.1.0"
description = ""
authors = ["synalice <nikita.nikita.krasnov@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.1.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
