[tool.poetry]
name = "aghpb_parser"
version = "0.1.0"
description = ""
authors = ["synalice <nikita.nikita.krasnov@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
black = "^22.1.0"
types-requests = "^2.27.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
